# eduApp

./: .coveragerc  .env.credentials.example  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  ACADEMIC_STRUCTURE_IMPLEMENTATION.md  ACCESSIBILITY_CHECKLIST.md  ACCESSIBILITY_FEATURES_SUMMARY.md  ACCESSIBILITY_IMPLEMENTATION_COMPLETE.md  ACCESSIBILITY_IMPLEMENTATION_SUMMARY.md  ACCESSIBILITY_QUICK_REFERENCE.md  ADAPTIVE_LEARNING_PATH_CHECKLIST.md  ADAPTIVE_LEARNING_PATH_FILES_CREATED.md  ADAPTIVE_LEARNING_PATH_IMPLEMENTATION.md  ADAPTIVE_LEARNING_PATH_QUICK_START.md  ADAPTIVE_LEARNING_PATH_README.md  ADAPTIVE_LEARNING_PATH_SUMMARY.md  ADMIN_LAYOUT_IMPLEMENTATION.md  ADMIN_LAYOUT_QUICK_START.md  ADMIN_LAYOUT_SUMMARY.md  AGENTS.md  AI_CHATBOT_CHECKLIST.md  AI_CHATBOT_FILES_CREATED.md  AI_CHATBOT_IMPLEMENTATION.md  AI_CHATBOT_IMPLEMENTATION_COMPLETE.md  AI_CHATBOT_QUICK_START.md  AI_CHATBOT_README.md  AI_CHATBOT_SUMMARY.md  AI_PREDICTION_DASHBOARD_CHECKLIST.md  AI_PREDICTION_DASHBOARD_IMPLEMENTATION.md  AI_PREDICTION_DASHBOARD_QUICK_START.md  AI_PREDICTION_DASHBOARD_SUMMARY.md  ANALYTICS_FILES_CREATED.md  ANALYTICS_IMPLEMENTATION.md  ANALYTICS_QUICK_START.md  ANALYTICS_README.md  ANALYTICS_REPORTING_CHECKLIST.md  ANALYTICS_REPORTING_QUICK_START.md  ANALYTICS_REPORTING_SUMMARY.md  (+242 more)
.claude/: settings.local.json
alembic/: env.py
blockchain/: README.md
cloudformation/: infrastructure.yaml
docs/: ADMIN_USER_GUIDE.md  AI_STUDY_BUDDY_AND_HOMEWORK_SCANNER.md  API_DOCUMENTATION.md  API_EXAMPLES.md  API_RATE_LIMITS.md  ARCHITECTURE.md  ASSIGNMENT_API_REFERENCE.md  AUTH_SYSTEM.md  AUTOGENERATED_MIGRATION_WORKFLOW.md  CARPOOL_COORDINATION.md  CI_CD_SETUP.md  COMMUNITY_SERVICE.md  CONTENT_MARKETPLACE.md  DATABASE_SCHEMA.md  DEPLOYMENT_RUNBOOK.md  DEVELOPER_SETUP_GUIDE.md  GOAL_GAMIFICATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INSTITUTION_HEALTH_MONITORING.md  INSTITUTION_MANAGEMENT_README.md  LIVE_EVENTS_API.md  LIVE_EVENTS_IMPLEMENTATION.md  LIVE_EVENTS_QUICKSTART.md  MERCHANDISE.md  MIGRATION_EXAMPLES.md  MIGRATION_NAMING_CONVENTION.md  MIGRATION_QUICK_REFERENCE.md  MIGRATION_ROLLBACK_PLAYBOOK.md  MIGRATION_ROLLBACK_PROCEDURES.md  MIGRATION_SAFETY_SYSTEM.md  MIGRATION_TESTING_QUICK_REFERENCE.md  MIGRATION_TROUBLESHOOTING.md  MULTI_TENANT_ARCHITECTURE.md  ONBOARDING_FEATURE.md  PEER_RECOGNITION.md  PEER_TUTORING.md  QUICKSTART.md  QUICK_START.md  RATE_LIMITING.md  RATE_LIMITING_SETUP.md  (+23 more)
e2e/: .env.example  CONTRIBUTING.md  README.md  TEST_MANIFEST.md  index.ts  package.json  tsconfig.json
examples/: credential_api_examples.py  credential_templates.json  ml_monitoring_examples.py  prediction_example.py  recommendation_usage.py  study_planner_example.py  virtual_classroom_client.html
frontend/: .env.development  .env.example  .env.production  .eslintignore  .eslintrc.cjs  .gitignore  ACCESSIBILITY.md  ACCESSIBILITY_IMPLEMENTATION.md  ACCESSIBILITY_QUICK_REFERENCE.md  ACCESSIBILITY_TESTING_GUIDE.md  AI_STUDY_BUDDY_IMPLEMENTATION.md  AI_STUDY_BUDDY_QUICK_START.md  ARCHITECTURE.md  AUTHENTICATION_CHECKLIST.md  AUTHENTICATION_GUIDE.md  AUTHENTICATION_IMPLEMENTATION.md  AUTHENTICATION_QUICK_REFERENCE.md  AUTHENTICATION_README.md  AUTHENTICATION_STRUCTURE.md  AUTHENTICATION_SUMMARY.md  DEVELOPMENT.md  EMPLOYMENT_FILES_CREATED.md  EMPLOYMENT_IMPLEMENTATION_SUMMARY.md  EMPLOYMENT_INDEX.md  EMPLOYMENT_QUICK_START.md  ERROR_HANDLING_CHECKLIST.md  ERROR_HANDLING_COMPONENT_REFERENCE.md  ERROR_HANDLING_DOCUMENTATION.md  ERROR_HANDLING_FILES_CREATED.md  ERROR_HANDLING_IMPLEMENTATION_SUMMARY.md  ERROR_HANDLING_INDEX.md  ERROR_HANDLING_MIGRATION_GUIDE.md  ERROR_HANDLING_QUICK_START.md  ERROR_HANDLING_README.md  FEATURES.md  GAMIFICATION_UI_IMPLEMENTATION.md  GAMIFICATION_UI_README.md  INDEX.md  INSTALLATION.md  LIVE_EVENT_FILES_CREATED.md  (+29 more)
logs/: .gitkeep
migration-tools/: README.md
mobile/: .detoxrc.js  .env.development  .env.example  .env.production  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  AI_FEATURES_IMPLEMENTATION.md  ANALYTICS_MONITORING_IMPLEMENTATION.md  ANALYTICS_QUICK_START.md  ANALYTICS_SETUP_CHECKLIST.md  ANDROID_IMPLEMENTATION.md  ANDROID_IMPLEMENTATION_COMPLETE.md  ANDROID_SETUP.md  ANDROID_TESTING.md  ANDROID_TEST_PLAN.md  ASSIGNMENTS_IMPLEMENTATION.md  ASSIGNMENTS_QUICK_START.md  AUTHENTICATION_IMPLEMENTATION_COMPLETE.md  AUTHENTICATION_IMPLEMENTATION_SUMMARY.md  AUTHENTICATION_QUICK_START.md  AUTH_MODULE_DOCUMENTATION.md  App.tsx  BIOMETRIC_AUTH_IMPLEMENTATION.md  BUILD_CACHE_CLEANUP_SUMMARY.md  BUILD_CLEANUP_GUIDE.md  BUNDLE_OPTIMIZATION_QUICK_REF.md  BUNDLE_OPTIMIZATION_SUMMARY.md  CHANGELOG.md  CHANGES_SUMMARY.md  CLEANUP_INSTRUCTIONS.md  CONTRIBUTING.md  CURRENT_STATUS.md  DEEP_LINKING_GUIDE.md  DEEP_LINKING_IMPLEMENTATION.md  DEEP_LINKING_QUICK_REFERENCE.md  DEEP_LINKING_SUMMARY.md  DEEP_LINK_TEST_COMMANDS.md  DEMO_USER_README.md  (+138 more)
nginx/: Dockerfile  nginx.conf  proxy_params
presentation/: IMPLEMENTATION_SUMMARY.md  INSTALL.md  QUICKSTART.md  README.md  create_presentation.py  generate.ps1  generate.sh
scripts/: MIGRATION_011_QUICK_REFERENCE.md  MIGRATION_011_TROUBLESHOOTING.md  MIGRATION_README.md  README.md  README_setup_questions_bank.md  check_and_fix_migration_011.sql  check_migration_dependencies.py  check_mysql_logs.ps1  check_schema_integrity.py  check_secrets.py  check_service_coverage.py  clean_autogenerated_migration.py  create_admin.py  diagnose_and_fix_migration_011.ps1  generate_clean_migration.py  generate_coverage_badge.py  migrate_postgres_to_mysql.py  migration_config.example.env  run-tests.sh  run_alembic_upgrade.ps1  run_alembic_upgrade.py  run_migration_011.bat  run_migration_011.sh  run_migration_tests.ps1  run_migration_tests.sh  run_mysql_migration_tests.ps1  run_mysql_migration_tests.sh  seed_gamification.py  setup_questions_bank.py  setup_testing.ps1  setup_testing.sh  subscription_example.py  subscription_scheduler.py  sync_schema_workflow.sh  test_migrations_production_like.py  verify_schema.py
src/: celery_app.py  config.py  database.py  main.py  redis_client.py
terraform/: main.tf  outputs.tf  variables.tf  (+1 more)
(+1658 files in other folders)
