[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = "FastAPI application with PostgreSQL, Redis, and Docker"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
bcrypt = "^4.1.2"
email-validator = "^2.1.0"
boto3 = "^1.34.0"
pypdf2 = "^3.0.0"
pillow = "^10.2.0"
celery = "^5.3.4"
sendgrid = "^6.11.0"
requests = "^2.31.0"
websockets = "^12.0"
scikit-learn = "^1.4.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
joblib = "^1.3.2"
sentence-transformers = "^2.2.2"
transformers = "^4.36.0"
torch = "^2.1.0"
hdbscan = "^0.8.33"
umap-learn = "^0.5.5"
openai = "^1.6.1"
tiktoken = "^0.5.2"
reportlab = "^4.0.0"
python-socketio = "^5.11.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.40.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
black = "^24.1.1"
ruff = "^0.1.14"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
