
[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = "FastAPI application with MySQL, Redis, and Docker"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
pymysql = "^1.1.0"
redis = "^5.0.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
bcrypt = "^4.1.2"
email-validator = "^2.1.0"
boto3 = "^1.34.0"
pypdf2 = "^3.0.0"
pillow = "^10.2.0"
celery = "^5.3.4"
sendgrid = "^6.11.0"
requests = "^2.31.0"
websockets = "^12.0"
scikit-learn = "^1.4.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
joblib = "^1.3.2"
sentence-transformers = "^2.2.2"
transformers = "^4.36.0"
torch = "^2.1.0"
hdbscan = "^0.8.33"
umap-learn = "^0.5.5"
openai = "^1.6.1"
tiktoken = "^0.5.2"
reportlab = "^4.0.0"
python-socketio = "^5.11.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.40.0"}
pytesseract = "^0.3.10"
sympy = "^1.12"
python-pptx = "^0.6.21"
qrcode = {extras = ["pil"], version = "^7.4.2"}
python-barcode = {extras = ["images"], version = "^0.15.1"}
slowapi = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-xdist = "^3.5.0"
pytest-benchmark = "^4.0.0"
httpx = "^0.26.0"
faker = "^22.0.0"
factory-boy = "^3.3.0"
freezegun = "^1.4.0"
black = "^24.1.1"
ruff = "^0.1.14"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.venv
  | venv
  | build
  | dist
  | alembic/versions
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "build",
    "dist",
    "alembic/versions",
    "node_modules",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = [
    "alembic/versions",
    "tests/",
    ".venv",
    "venv",
]

[[tool.mypy.overrides]]
module = "src.services.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "src.utils.*"
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-branch",
    "--cov-fail-under=70",
    "-n=auto",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/migrations/*",
    "*/alembic/*",
    "*/__init__.py",
    "*/config.py",
    "*/conftest.py",
]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "@overload",
    "except ImportError:",
]
skip_empty = true

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.paths]
source = [
    "src",
    "*/site-packages",
]

# Per-service coverage targets for critical services
[tool.coverage.targets]
"src/services/auth_service.py" = 80
"src/services/subscription_service.py" = 75
"src/services/assignment_service.py" = 75
"src/services/attendance_service.py" = 75
"src/services/notification_service.py" = 70
"src/utils/security.py" = 85
"src/utils/rbac.py" = 80
